# book-store

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bookstore/bookstore/: settings.py  urls.py
bookstore/store/migrations/: 0001_initial.py
bookstore/templates/: base.html
bookstore/templates/components/: connects.html  navbar.html
src/: conftest.py
src/api/: filters.py  serializers.py  urls.py  views.py
src/api/tests/: test_api.py  test_serializers.py
src/authentication/: forms.py  urls.py  views.py
src/authentication/tests/: test_forms.py  test_views.py
src/cart/: __init__.py  admin.py  context_processors.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
src/cart/migrations/: 0001_initial.py  0002_cart_total_items_cart_total_price_and_more.py
src/cart/tests/: test_cart_merge.py  test_models.py  test_tasks.py  test_views.py
src/core/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/core/settings/: __init__.py  base.py  development.py  production.py  testing.py
src/profile/: admin.py  forms.py  models.py
src/reviews/: admin.py  forms.py  models.py  views.py
src/reviews/migrations/: 0001_initial.py
src/reviews/tests/: test_models.py  test_views.py
src/static/css/: elasticsearch-autocomplete.css  main.css  main.css.map
src/static/js/: cart.js  elasticsearch-autocomplete.js
src/static/scss/: _auth.scss  _cards.scss  _footer.scss  _global.scss  _header.scss  _main_book.scss  _variables.scss  main.scss
src/store/: admin.py  documents.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
src/store/migrations/: 0002_alter_book_options_alter_genre_options_and_more.py  0003_alter_book_photo_alter_genre_description.py  0004_alter_book_is_published.py  0005_rename_email_subscription.py  0007_book_discounted_lt_price_or_null.py  (+2 more)
src/templates/: base.html
src/user_profile/: forms.py  models.py  signals.py  urls.py  views.py
(+31 files in other folders)
