[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Test project - example of book store"
authors = ["IvanB <baklanovivan25@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
python-decouple = "^3.8"
psycopg2 = "^2.9.10"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
